# Project-DJ-Engine-Docs

./: .gitignore  DOCUMENT_GENERATOR.sh  Doxyfile  GodotAssetLib_Intro.txt  README.md  clone_projects.sh  copy_nojekyll.sh  pull_projects.sh  pyproject.toml
agent_docs_for_godot_user/: README.md
agent_docs_for_godot_user/harness/: README.md
agent_docs_for_godot_user/report/: README.md  bug_report.md  feature_request.md
docs/: .buildinfo  Core_Engine.html  Data_Lines.html  Developer_Onboarding.html  Editor_Format.html  Editor_Workflows.html  FX_ARGS.html  Getting Started.html  Input_Engine.html  Judge_Engine.html  PDJE_For_AI_Agents.html  Util_Engine.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/.doctrees/: Core_Engine.doctree  Data_Lines.doctree  Developer_Onboarding.doctree  Editor_Format.doctree  Editor_Workflows.doctree  FX_ARGS.doctree  Getting Started.doctree  Input_Engine.doctree  Judge_Engine.doctree  PDJE_For_AI_Agents.doctree  Util_Engine.doctree  index.doctree
docs/_sources/: Core_Engine.rst.txt  Data_Lines.rst.txt  Developer_Onboarding.rst.txt  FX_ARGS.rst.txt  Getting Started.rst.txt  Input_Engine.rst.txt  Judge_Engine.rst.txt  (+3 more)
docs_harness/: HARNESS.md  SRCS_DOC_GENERATION_SPEC.md  doc_scope.yaml  source_baseline.lock.json  source_heads.lock.json
srcs/: Developer_Onboarding.rst  Editor_Format.rst  Editor_Workflows.rst  Getting Started.rst  Util_Engine.rst  conf.py  index.rst
tests/: test_agent_docs_for_godot_user.py  test_docs_generation_assets.py  test_docs_harness.py
tools/: __init__.py  docs_harness.py
(+16526 files in other folders)
